--- a/Front End Web Project/sudheer25.css
+++ b/Front End Web Project/sudheer25.css
@@ -171,8 +171,8 @@ display:none;
 }
 nav b
 {
-    font-family:Kristen ITC;
-    font-size: 25px;
+    font-family:Century Gothic;
+    font-size: 35px;
     color:darkorange;
 }
 nav b span1
