--- a/Front End Web Project/sudheer35.css
+++ b/Front End Web Project/sudheer35.css
@@ -12,15 +12,15 @@ body
 .grid1
 {
     background-color:dimgrey;
-    display:block;
+    display:inline;
     width:300px;
-    height:200px;
+    height:170px;
     position:absolute;
     padding: 10px;
     top: 20%;
     left: 11%;
     text-align:center;
-    border-radius:100px;
+    border-radius:78px;
     border:2px solid aliceblue;
     //transform:translate(10%,10%);//
     transition-delay: 0;
@@ -28,67 +28,67 @@ body
 p
 {
     padding-top:0%;
-    font-size: 50px;
-    font-family:Ink Free;
-    color:black;
+    font-size: 20px;
+    font-family:Century Gothic;
+    color:aliceblue;
 }
 .grid2
 {
     background-color:dimgrey;
-    display:block;
+    display:inline;
     width:300px;
-    height:200px;
+    height:170px;
     position:absolute;
     padding: 10px;
     top:20%;
     left:38%;
     text-align:center;
-    border-radius:100px;
+    border-radius:78px;
     border:2px solid aliceblue;
     transition-delay: 0s;
 }
 .grid3
 {
     background-color:dimgrey;
-    display:block;
+    display:inline;
     width:300px;
-    height:200px;
+    height:170px;
     position:absolute;
     padding: 10px; 
     top:20%;
     left:65%;
     text-align:center;
-    border-radius:100px;
+    border-radius:78px;
     border:2px solid aliceblue;
     transition-delay: 0s;
 }
 .grid4
 {
     background-color:dimgrey;
-    display:block;
+    display:inline;
     width:300px;
-    height:200px;
+    height:170px;
     position:absolute;
     padding: 10px; 
     top:60%;
     left:25%;
     text-align:center;
-    border-radius:100px;
+    border-radius:78px;
     border:2px solid aliceblue;
     transition-delay: 0s;
 }
 .grid5
 {
     background-color:dimgrey;
-    display:block;
+    display:inline;
     width:300px;
-    height:200px;
+    height:170px;
     position:absolute;
     padding: 10px; 
     top:60%;
     left:52%;
     text-align:center;
-    border-radius:100px;
+    border-radius:78px;
     border:2px solid aliceblue;
     transition-delay: 0s;
 }
