--- a/Front End Web Project/sudheer30.css
+++ b/Front End Web Project/sudheer30.css
@@ -14,68 +14,65 @@ body
 .grid1
 {
     background-color:dimgrey;
-    color:dimgrey;
+    color:aliceblue;
     display:block;
-    width:270px;
-    height:350px;
+    width:1000px;
+    height:130px;
     position:absolute;
     padding: 10px;
-    top: 23%;
-    left: 11%;
+    top: 13%;
+    left: 2%;
     text-align:center;
-    border-radius: 15px;
+    border-radius: 5px;
     border:1px solid aliceblue;
     //transform:translate(-150%,20%);//
 }
 .grid2
 {
     background-color:dimgrey;
-    color:dimgrey;
+    color:aliceblue;
     display:block;
-    width:270px;
-    height:350px;
+    width:1000px;
+    height:130px;
     position:absolute;
     padding: 10px;
-    top:23%;
-    left:38%;
+    top:38%;
+    left:12%;
     text-align:center;
-    border-radius: 15px;
+    border-radius: 5px;
     border:1px solid aliceblue;
 }
 .grid3
 {
     background-color:dimgrey;
-    color:dimgrey;
+    color:aliceblue;
     display:block;
-    width:270px;
-    height:350px;
+    width:1000px;
+    height:130px;
     position:absolute;
     padding: 10px;
-    top: 23%;
-    left: 65%;
+    top: 63%;
+    left: 22%;
     text-align:center;
-    border-radius: 15px;
+    border-radius: 5px;
     border:1px solid aliceblue;
-}
-.grid1:hover,.grid2:hover,.grid3:hover
-{
-    background-color: aliceblue;
-    transition: 0.6s;
-    z-index: 1;
-    transform: scale(1.25);
-    color:darkorange;
 }
 p
 {
     font-family: cursive;
     font-size: 20px;
-    padding-top:10%;
+    padding-top:0%;
+    text-align: left;
+}
+h2
+{
+    text-align: left;
+    color:darkorange;
 }
 h1
 {
+    text-align: center;
+    color: aliceblue;
+    font-size: 25px;
     font-family: monospace;
-    font-size:50px;
-    padding-top:23%;
-    color:aliceblue;
 }
-
