--- a/Front End Web Project/sudheer32.css
+++ b/Front End Web Project/sudheer32.css
@@ -57,6 +57,7 @@ div select[type="dropdown"]
     text-align: center;
     border-radius: 15px;
     outline:none;
+    font-family:cursive;
     background-color: aliceblue;
 }
 div p
@@ -71,4 +72,13 @@ div input[type="submit"]:hover
 	background:darkorange;
     box-shadow: 1px 1.881px 20px aliceblue;
     transition-delay: 0s;
+}
+a
+{
+    text-align: right;
+    text-decoration: none;
+    padding-left: 70%;
+    color: aliceblue;
+    font-family: Century Gothic;
+    font-size: 30px;
 }
